--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.1.4",
+    "uid": "^2.0.2",
     "vite-plugin-i18next-loader": "^3.0.0",
     "vite-plugin-top-level-await": "^1.4.4",
     "vite-plugin-wasm": "^3.3.0",
@@ -35,6 +36,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "@types/w3c-web-hid": "^1.0.6",
     "@vitejs/plugin-react": "^4.3.4",
     "i18next-parser": "^9.0.2",
     "typescript": "^5.7.2",
