--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "locale:gen": "i18next --fail-on-warnings 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
     "@tauri-apps/api": "^2.1.1",
     "@tauri-apps/plugin-shell": "^2.2.0",
@@ -27,8 +28,7 @@
     "uid": "^2.0.2",
     "vite-plugin-i18next-loader": "^3.0.0",
     "vite-plugin-top-level-await": "^1.4.4",
-    "vite-plugin-wasm": "^3.3.0",
-    "vite-svg-loader": "^5.1.0"
+    "vite-plugin-wasm": "^3.3.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
@@ -40,6 +40,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "i18next-parser": "^9.0.2",
     "typescript": "^5.7.2",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
