--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
     "@tauri-apps/api": "^2.1.1",
+    "@tauri-apps/plugin-os": "^2.2.0",
     "@tauri-apps/plugin-shell": "^2.2.0",
     "classnames": "^2.5.1",
     "framer-motion": "^11.13.5",
@@ -25,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.1.4",
+    "semver": "^7.6.3",
     "uid": "^2.0.2",
     "vite-plugin-i18next-loader": "^3.0.0",
     "vite-plugin-top-level-await": "^1.4.4",
@@ -36,6 +38,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "@types/semver": "^7.5.8",
     "@types/w3c-web-hid": "^1.0.6",
     "@vitejs/plugin-react": "^4.3.4",
     "i18next-parser": "^9.0.2",
