--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,3 +29,19 @@ hidapi = "^2.6"
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
 anyhow = "^1"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+winsafe = { version = "0.0.22", features = ["gui", "gdi"] }
+webview2 = "0.1.4"
+tempfile = "^3.15"
+reqwest = "*"
+async-process = "^2.3"
+tauri-plugin-opener = "2"
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
+opt-level = "s"
+debug = false
+strip = true
